syntax = "proto3";

package greeter;

service Greeter {
  rpc SendData(TestMessage) returns (TestResponse);
}

message TestMessage {
  string content = 1;
}

message TestResponse {
  string result = 1;
}
